# FileSyncer

./: BUILDING.md  CMakeLists.txt  KMessageWidget.cpp  KMessageWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetworkManager.cpp  NetworkManager.h  README.md  main.cpp
